<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">TermProject2016</string>
    <string name="actOpen_btnBrowse">Browse for Files</string>
    <string name="actOpen_btnOpen">Open URL</string>
    <string name="actOpen_btnAdd">Add to Playlist</string>
    <string name="actOpen_txtType">File types:</string>
    <string name="actOpen_rdgType_audio">Audio</string>
    <string name="actOpen_rdgType_video">Video</string>
    <string name="actOpen_rdgType_both">Both</string>
    <string name="actOpen_err_invalidUri">Please provide a valid URL.</string>

    <string name="frgListView_source">From %1$s:</string>

    <string name="title_activity_player">PlayerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="actProviderList_status_connected">Connected</string>
    <string name="actProviderList_status_empty">Not Connected</string>

    <string name="mnuMain_providers">Configure Providers</string>


    <string name="provider_spotify">Spotify</string>


    <!-- App name -->
    <string name="apps_name">Music Notification</string>
    <string name="app_version_number">1.0</string>
    <string name="menu_settings">Settings</string>

    <string name="cd_repeat">Repeat one or all</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="cd_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="add_to_playlist_array">
        <item>Play File</item>
        <item>Add To Playlist</item>
        <item>Cancel</item>
    </string-array>
    <string-array name="manage_playlist_array">
        <item>Play Playlist</item>
        <item>View Playlist</item>
        <item>Shuffle Playlist</item>
        <item>Delete Playlist</item>
        <item>Cancel</item>
    </string-array>
    <string-array name="manage_playlist_item_array">
        <item>Play File</item>
        <item>Remove From Playlist</item>
        <item>Move Up In Playlist</item>
        <item>Move Down In Playlist</item>
        <item>Cancel</item>
    </string-array>
    <string name="title_activity_add_to_playlist">AddToPlaylistActivity</string>
</resources>
